added mayor's walk place type and icon. Also improved form fields and set default geolocation to South Park

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -37,9 +37,9 @@ map:
 
   options:
     center:
-      lat: 47.564901
-      lng: -122.345837
-    zoom: 13
+      lat: 47.53036
+      lng: -122.32122
+    zoom: 15
     minZoom: 9
     maxZoom: 18
 #    maxBounds: [[47.000, -123.26], [47.92, -120.67]] # south, west, north, east
@@ -234,6 +234,12 @@ map:
 
   # Report filters
 
+    - title: _(Mayor's Walk)
+      shareabouts: true
+      image: /static/css/images/markers/marker-walk.png
+      url: /filter/mayorswalk
+      external: true
+      visible: true
     - title: _(Observations)
       shareabouts: true
       image: /static/css/images/markers/marker-observation.png
@@ -274,6 +280,35 @@ map:
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
 place_types:
+  mayorswalk:
+    label: _(Mayor's Walk)
+    rules:
+      - condition: '"{{location_type}}" === "mayorswalk" && {{map.zoom}} < 11 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-walk.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '"{{location_type}}" === "mayorswalk" && {{map.zoom}} < 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-walk.png
+          iconSize: [24, 29]
+          iconAnchor: [12, 29]
+
+      - condition: '"{{location_type}}" === "mayorswalk" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-walk.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+      - condition: '"{{location_type}}" === "mayorswalk" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-walk.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
   observation:
     label: _(Observation)
     rules:
@@ -474,6 +509,15 @@ place:
   location_item_name: location
 
   items:
+    - prompt: _(Title of report)
+      type: text
+      name: name
+      optional: true
+      attrs:
+        - key: placeholder
+          value: _(Enter title)
+        - key: size
+          value: 30
     - prompt: _(Your Name)
       type: text
       name: submitter_name
@@ -494,20 +538,11 @@ place:
           value: _(Email address)
         - key: size
           value: 30
-    - prompt: _(Location Name)
-      type: text
-      name: name
-      optional: true
-      attrs:
-        - key: placeholder
-          value: _(Location Name)
-        - key: size
-          value: 30
     - prompt: _(Type of report)
       type: select
       options:
-        - label: _(Choose One)
-          value: ''
+        - label: _(Mayor's Walk)
+          value: mayorswalk
         - label: _(Observation)
           value: observation
         - label: _(Question)
