turned add places back on

--- a/src/flavors/happytrail/config.yml
+++ b/src/flavors/happytrail/config.yml
@@ -494,8 +494,8 @@ activity:
   # Place Types
 
 place:
-#  adding_supported: true
-#  add_button_label: _(Submit a comment)
+  adding_supported: true
+  add_button_label: _(Submit a comment)
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(See All Reports)
   show_map_button_label: _(Show the Map)
