--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -231,7 +231,50 @@ map:
       title: _(Original river path)
       visible: false
       
+  # Report filters
 
+    - title: _(Mayor's Walk)
+      shareabouts: true
+      image: /static/css/images/markers/marker-walk.png
+      url: /filter/mayorswalk
+      external: true
+      visible: true
+    - title: _(Observations)
+      shareabouts: true
+      image: /static/css/images/markers/marker-observation.png
+      url: /filter/observation
+      external: true
+      visible: true
+    - title: _(Ideas)
+      shareabouts: true
+      image: /static/css/images/markers/marker-idea.png
+      url: /filter/idea
+      external: true
+      visible: true
+    - title: _(Questions)
+      shareabouts: true
+      image: /static/css/images/markers/marker-question.png
+      url: /filter/question
+      external: true
+      visible: true
+    - title: _(Complaints)
+      shareabouts: true
+      image: /static/css/images/markers/marker-complaint.png
+      url: /filter/complaint
+      external: true
+      visible: true
+    - title: _(Hide Reports)
+      shareabouts: true
+      url: /filter/none
+      image: /static/css/images/hide-all.png
+      external: true
+      visible: true
+    - title: _(Show Reports)
+      shareabouts: true
+      url: /
+      image: /static/css/images/show-all.png
+      external: true
+      visible: true
 
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
@@ -441,6 +484,51 @@ place_types:
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
 sidebar:
   enabled: true
+  slug: filter-type
+  reports:
+  # Report filters
+  - title: _(Mayor's Walk)
+    shareabouts: true
+    image: /static/css/images/markers/marker-walk.png
+    url: /filter/mayorswalk
+    external: true
+    visible: true
+  - title: _(Observations)
+    shareabouts: true
+    image: /static/css/images/markers/marker-observation.png
+    url: /filter/observation
+    external: true
+    visible: true
+  - title: _(Ideas)
+    shareabouts: true
+    image: /static/css/images/markers/marker-idea.png
+    url: /filter/idea
+    external: true
+    visible: true
+  - title: _(Questions)
+    shareabouts: true
+    image: /static/css/images/markers/marker-question.png
+    url: /filter/question
+    external: true
+    visible: true
+  - title: _(Complaints)
+    shareabouts: true
+    image: /static/css/images/markers/marker-complaint.png
+    url: /filter/complaint
+    external: true
+    visible: true
+  - title: _(Hide Reports)
+    shareabouts: true
+    url: /filter/none
+    image: /static/css/images/hide-all.png
+    external: true
+    visible: true
+  - title: _(Show Reports)
+    shareabouts: true
+    url: /
+    image: /static/css/images/show-all.png
+    external: true
+    visible: true
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
@@ -575,76 +663,3 @@ pages:
   - title: _(Contribute)
     slug: contribute
     name: contribute
-
-  - title: Filter Places
-    slug: filter-type
-    pages:
-      - title: _(Mayor's Walk)
-        url: /filter/mayorswalk
-        external: true
-      - title: _(Observations)
-        url: /filter/observation
-        external: true
-      - title: _(Ideas)
-        url: /filter/school
-        external: true
-      - title: _(Questions)
-        url: /filter/question
-        external: true
-      - title: _(Complaints)
-        url: /filter/complaint
-        external: true
-      - title: _(Hide Reports)
-        shareabouts: true
-        url: /filter/none
-        image: /static/css/images/hide-all.png
-        external: true
-        visible: true
-      - title: _(Show Reports)
-        external: true
-        url: /filter/all
-
-#  # Report filters
-#
-#    - title: _(Mayor's Walk)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-walk.png
-#      url: /filter/mayorswalk
-#      external: true
-#      visible: true
-#    - title: _(Observations)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-observation.png
-#      url: /filter/observation
-#      external: true
-#      visible: true
-#    - title: _(Ideas)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-idea.png
-#      url: /filter/idea
-#      external: true
-#      visible: true
-#    - title: _(Questions)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-question.png
-#      url: /filter/question
-#      external: true
-#      visible: true
-#    - title: _(Complaints)
-#      shareabouts: true
-#      image: /static/css/images/markers/marker-complaint.png
-#      url: /filter/complaint
-#      external: true
-#      visible: true
-#    - title: _(Hide Reports)
-#      shareabouts: true
-#      url: /filter/none
-#      image: /static/css/images/hide-all.png
-#      external: true
-#      visible: true
-#    - title: _(Show Reports)
-#      shareabouts: true
-#      url: /
-#      image: /static/css/images/show-all.png
-#      external: true
-#      visible: true
