added meta description for happy trail and raingardens for better Google/Facebook/etc scraping

--- a/src/flavors/happytrail/config.yml
+++ b/src/flavors/happytrail/config.yml
@@ -5,7 +5,7 @@ app:
   # Header name
   name: 8th Ave. S. Bike Trail
   # Meta description that will show up in Google search results
-  meta_description: _(Duwamish Waterway River Cleanup superfund SmarterCleanup Community)
+  meta_description: _(The youth of South Park hit the 8th Ave. Bike trail with a major overhaul. Formally known as the "scary trail" this map shows all the amazing work they did.)
   # Meta author that will show up in Google search results
   meta_author: SmarterCleanup.org
 
