--- a/src/flavors/raingardens/config.yml
+++ b/src/flavors/raingardens/config.yml
@@ -7,7 +7,7 @@ app:
   # Header name
   name: 12,000 Rain Gardens
   # Meta description that will show up in Google search results
-  meta_description: _(raingardens, rain gardens, stormwater, storm water)
+  meta_description: _(Washington State University and Stewardship Partners are leading a groundbreaking campaign to install 12,000 rain gardens in the Seattle/Puget Sound Region by 2016. This is the map to track our progress. You can actively participate in this exciting campaign by installing one or more rain gardens in your community. In return you will reduce water pollution, prevent flooding, increase home values, make for beautiful, low-maintenance landscapes, and help your community save millions of dollars in pollution clean-up and expensive stormwater projects.)
   # Meta author that will show up in Google search results
   meta_author: SmarterCleanup.org
 
