--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -47,14 +47,15 @@ map:
   layers:
 #      attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
       # SmarterCleanup Mapbox base layer:
-    - url: //{s}.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
+    - id: mapbox-base # unique identifier for the layer
+      url: //{s}.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       visible: true
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
 
   # Map Layers
 
-     # Mapbox project freehand drawing imports
-    - url: //a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
+    - id: mapbox-early-action
+      url: //a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       type: json
       description: _(Places where positive restoration and community organizing are happening)
       popupContent: '{{title}}'
@@ -143,7 +144,8 @@ map:
             iconAnchor: [8, 8]
 
      # Mapbox project freehand drawing imports
-    - url: //a.tiles.mapbox.com/v4/smartercleanup.mfigd1mf/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
+    - id: mapbox-pollution
+      url: //a.tiles.mapbox.com/v4/smartercleanup.mfigd1mf/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       type: json
       description: _(Places where pollution has been problematic)
       popupContent: '{{title}}'
@@ -172,7 +174,8 @@ map:
             weight: "{{properties.stroke-width}}"
 
       # WMS ROD
-    - url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/gwc/service/wms
+    - id: epa-rod
+      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/gwc/service/wms
       layers: 'wria9:EPARODMergedFinal'
       version: '1.1.0'
       transparent: true
@@ -184,7 +187,8 @@ map:
       visible: false
 
       # WMS landuse
-    - url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/gwc/service/wms
+    - id: landuse
+      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/gwc/service/wms
       layers: 'wria9:Landuse2010'
       version: '1.1.0'
       transparent: 'true'
@@ -196,7 +200,8 @@ map:
       visible: false
 
       # WMS Buildings connection:
-    - url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
+    - id: buildings
+      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
       layers: 'wria9:2009BuildingsCOS'
       version: '1.1.0'
       transparent: 'true'
@@ -207,7 +212,8 @@ map:
       visible: false
 
       # WMS NLCD
-    - url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
+    - id: nlcd
+      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
       layers: 'wria9:nlcd2011'
       version: '1.1.0'
       transparent: 'true'
@@ -220,7 +226,8 @@ map:
       visible: false
       
       # WMS Original Flow
-    - url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
+    - id: duwamish-original
+      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
       layers: 'wria9:Historical_Flow'
       version: '1.1.0'
       transparent: 'true'
@@ -413,25 +420,30 @@ sidebar:
   enabled: true
   legend_enabled: true
   slug: filter-type
+  # Layers are defined in the "map config" section
+  # TODO: Refactor the Layers section into its own sidebar
+  layersTitle: _(Map Layers)
   reports:
-  - title: _(Observations)
-    image: /static/css/images/markers/marker-observation.png
-    url: /filter/observation
-  - title: _(Ideas)
-    image: /static/css/images/markers/marker-idea.png
-    url: /filter/idea
-  - title: _(Questions)
-    image: /static/css/images/markers/marker-question.png
-    url: /filter/question
-  - title: _(Complaints)
-    image: /static/css/images/markers/marker-complaint.png
-    url: /filter/complaint
-  - title: _(Hide Reports)
-    url: /filter/none
-    image: /static/css/images/hide-all.png
-  - title: _(Show Reports)
-    url: /
-    image: /static/css/images/show-all.png
+    title: _(Reports Types)
+    items:
+      - title: _(Observations)
+        image: /static/css/images/markers/marker-observation.png
+        url: /filter/observation
+      - title: _(Ideas)
+        image: /static/css/images/markers/marker-idea.png
+        url: /filter/idea
+      - title: _(Questions)
+        image: /static/css/images/markers/marker-question.png
+        url: /filter/question
+      - title: _(Complaints)
+        image: /static/css/images/markers/marker-complaint.png
+        url: /filter/complaint
+      - title: _(Hide Reports)
+        url: /filter/none
+        image: /static/css/images/hide-all.png
+      - title: _(Show Reports)
+        url: /
+        image: /static/css/images/show-all.png
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
