--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -498,7 +498,7 @@ place:
         - key: size
           value: 30
     - prompt: _(Type of report)
-      type: select
+      type: imageTab
       options:
         - label: _(Observation)
           value: observation
