--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "shareabouts-django-client",
+  "name": "smartercleanup-django-client",
   "version": "3.19.1",
   "description": "Standalone Shareabouts client and server package",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/openplans/shareabouts.git"
+    "url": "https://github.com/smartercleanup/duwamish.git"
   },
   "keywords": [
     "maps",
     "crowdsourcing",
     "engagement"
   ],
-  "author": "OpenPlans",
+  "author": "SmarterCleanup",
   "license": "GPL",
   "bugs": {
-    "url": "https://github.com/openplans/shareabouts/issues"
+    "url": "https://github.com/smartercleanup/duwamish/issues"
   },
-  "homepage": "https://github.com/openplans/shareabouts",
+  "homepage": "https://github.com/smartercleanup/duwamish",
   "scripts": {
     "postinstall": "./node_modules/grunt-cli/bin/grunt",
     "build-preload-js": "cat src/sa_web/static/dist/preload2.js | uglifyjs -cm | tee src/sa_web/static/dist/preload-bundle.js | gzip > src/sa_web/static/dist/preload-bundle.js.gz",
