--- a/src/flavors/trees/config.yml
+++ b/src/flavors/trees/config.yml
@@ -1,13 +1,13 @@
 # Settings for the app
 app:
   # HTML Title
-  title: 12,000 Rain Gardens
+  title: Trees!
   # Site Link
-  link: http://12000raingardens.org
+  link: Trees!
   # Header name
-  name: 12,000 Rain Gardens
+  name: Trees!
   # Meta description that will show up in Google search results
-  meta_description: _(Washington State University and Stewardship Partners are leading a groundbreaking campaign to install 12,000 rain gardens in the Seattle/Puget Sound Region by 2016. This is the map to track our progress. You can actively participate in this exciting campaign by installing one or more rain gardens in your community. In return you will reduce water pollution, prevent flooding, increase home values, make for beautiful, low-maintenance landscapes, and help your community save millions of dollars in pollution clean-up and expensive stormwater projects.)
+  meta_description: _(Trees!)
   # Meta author that will show up in Google search results
   meta_author: SmarterCleanup.org
 
@@ -32,7 +32,7 @@ map:
 
   counter: true
   counter_min: 0
-  counter_max: 12000
+  counter_max: 1000
 
   options:
     center:
