--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "homepage": "https://github.com/smartercleanup/duwamish",
   "scripts": {
     "postinstall": "./node_modules/grunt-cli/bin/grunt",
-    "build-preload-js": "cat src/sa_web/static/dist/preload2.js | uglifyjs -cm | tee src/sa_web/static/dist/preload-bundle.js | gzip > src/sa_web/static/dist/preload-bundle.js.gz",
-    "build-js": "cat src/sa_web/static/dist/app2.js | uglifyjs -cm | tee src/sa_web/static/dist/bundle.js | gzip > src/sa_web/static/dist/bundle.js.gz",
-    "build-css":  "cat src/sa_web/static/dist/app2.css | tee src/sa_web/static/dist/bundle.css | gzip > src/sa_web/static/dist/bundle.css.gz",
-    "build": "node concat.js && npm run build-preload-js && npm run build-js && npm run build-css "
+    "build-lib-js": "cat src/sa_web/static/dist/cat-lib-bundle.js | uglifyjs -cm | tee src/sa_web/static/dist/lib-bundle.js | gzip > src/sa_web/static/dist/lib-bundle.js.gz",
+    "build-preload-js": "cat src/sa_web/static/dist/cat-preload-bundle.js | uglifyjs -cm | tee src/sa_web/static/dist/preload-bundle.js | gzip > src/sa_web/static/dist/preload-bundle.js.gz",
+    "build-js": "cat src/sa_web/static/dist/cat-bundle.js | uglifyjs -cm | tee src/sa_web/static/dist/bundle.js | gzip > src/sa_web/static/dist/bundle.js.gz",
+    "build-css":  "cat src/sa_web/static/dist/cat-bundle.css | tee src/sa_web/static/dist/bundle.css | gzip > src/sa_web/static/dist/bundle.css.gz",
+    "build": "node concat.js && npm run build-lib-js && npm run build-preload-js && npm run build-js && npm run build-css"
   },
   "dependencies": {
     "grunt": "^0.4.5",
