--- a/src/flavors/air/config.yml
+++ b/src/flavors/air/config.yml
@@ -1,13 +1,13 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Air!
+  title: Air.HeyDuwamish
   # Site Link
-  link: Air!
+  link: Air.HeyDuwamish
   # Header name
-  name: Air!
+  name: Air.HeyDuwamish
   # Meta description that will show up in Google search results
-  meta_description: _(Air!)
+  meta_description: _(Duwamish Air!)
   # Meta author that will show up in Google search results
   meta_author: SmarterCleanup.org
 
@@ -30,7 +30,7 @@ map:
   geocoding_bar_enabled: false # add a geocode bar across the map
   geocode_bounding_box: [45.2, -125, 49.3, -116.4] # Including cushion
 
-  counter: true
+  counter: false
   counter_min: 0
   counter_max: 1000
 
@@ -50,8 +50,50 @@ map:
 
   # Map Layers
 
+    - id: mapbox-pscaa
+      # url: //a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
+      url: //a.tiles.mapbox.com/v4/smartercleanup.njpe7ha8/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
+      type: json
+      description: _(Air Monitoring Stations by PSCAA)
+      popupContent: '{{title}}'
+      legend: true
+      visible: true
+      title: _(Air Monitoring)
+      rules:
+        # - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "danger"'
+        #   icon:
+        #     iconUrl: /static/css/images/markers/marker-construction.png
+        #     iconSize: [30, 30]
+        #     iconAnchor: [15, 15]
+
+        # - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "park2"'
+        #   icon:
+        #     iconUrl: /static/css/images/markers/marker-treeheart.png
+        #     iconSize: [40, 40]
+        #     iconAnchor: [13, 13]
+
+        # - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "industrial"'
+        #   icon:
+        #     iconUrl: /static/css/images/markers/marker-industrial.png
+        #     iconSize: [40, 40]
+        #     iconAnchor: [20, 20]
+
+        # - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "bicycle"'
+        #   icon:
+        #     iconUrl: /static/css/images/markers/marker-bike.png
+        #     iconSize: [30, 30]
+        #     iconAnchor: [15, 15]
+
+        # default point marker case
+        - condition: '"{{geometry.type}}" == "Point"'
+          icon:
+            iconUrl: /static/css/images/markers/dot-fa307d.png
+            iconSize: [16, 16]
+            iconAnchor: [8, 8]
+
       # WMS landuse
-    - url: http://heyduwamish.org:8080/geoserver/wria9/wms
+    - id: geoserver-landuse
+      url: http://heyduwamish.org:8080/geoserver/wria9/wms
       layers: 'wria9:Landuse2010'
       version: '1.1.0'
       transparent: 'true'
@@ -63,7 +105,8 @@ map:
       visible: false
 
       # WMS Buildings connection:
-    - url: http://heyduwamish.org:8080/geoserver/wria9/wms # GCE Geoserver
+    - id: geoserver-buildings
+      url: http://heyduwamish.org:8080/geoserver/wria9/wms # GCE Geoserver
       layers: 'wria9:2009BuildingsCOS'
       version: '1.1.0'
       transparent: 'true'
@@ -98,75 +141,184 @@ map:
 
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
-
-  # Icon Controls
-
 place_types:
-  raingarden:
-    label: _(rain garden)
+
+  observation:
+    label: _(Observation)
     rules:
-      - condition: '"{{location_type}}" === "raingarden" && {{map.zoom}} < 11 && {{layer.focused}} === false'
+      - condition: '"{{location_type}}" === "observation" && {{map.zoom}} < 11 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-drop.png
-          iconSize: [7, 12]
+          iconUrl: /static/css/images/markers/marker-observation.png
+          iconSize: [10, 12]
           iconAnchor: [5, 12]
 
-      - condition: '"{{location_type}}" === "raingarden" && {{map.zoom}} < 13 && {{layer.focused}} === false'
+      - condition: '"{{location_type}}" === "observation" && {{map.zoom}} < 13 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-drop.png
+          iconUrl: /static/css/images/markers/marker-observation.png
           iconSize: [24, 29]
           iconAnchor: [12, 29]
 
-      - condition: '"{{location_type}}" === "raingarden" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
+      - condition: '"{{location_type}}" === "observation" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-drop.png
+          iconUrl: /static/css/images/markers/marker-observation.png
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-      - condition: '"{{location_type}}" === "raingarden" && {{layer.focused}} === true'
+      - condition: '"{{location_type}}" === "observation" && {{layer.focused}} === true'
         icon:
-          iconUrl: /static/css/images/markers/marker-drop.png
+          iconUrl: /static/css/images/markers/marker-observation.png
           shadowUrl: /static/css/images/marker-shadow.png
           iconSize: [50, 60]
           iconAnchor: [25, 60]
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
+
+  question:
+    label: _(Question)
+    rules:
+      - condition: '"{{location_type}}" === "question" && {{map.zoom}} < 11 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '"{{location_type}}" === "question" && {{map.zoom}} < 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          iconSize: [24, 29]
+          iconAnchor: [12, 29]
+
+      - condition: '"{{location_type}}" === "question" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+      - condition: '"{{location_type}}" === "question" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-question.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+#      - condition: '"{{location_type}}" === "question" && {{layer.focused}}'
+#        icon:
+#          iconUrl: /static/css/images/markers/marker-question.png
+#          shadowUrl: /static/css/images/marker-shadow.png
+#          iconSize: [50, 60]
+#          shadowSize: [50, 60]
+#          shadowAnchor: [25, 60]
+#          iconAnchor: [25, 60]
+#
+#      - condition: '"{{location_type}}" === "question"'
+#        # Show questions that are points as icons...
+#
+#        icon:
+#          iconUrl: /static/css/images/markers/marker-question.png
+#          iconSize: [24, 29]
+#          iconAnchor: [12, 29]
+#
+#        # ...and questions that are polygons as shapes.
+#
+#        style:
+#          color: '#4bbd45'
+#          weight: 1
+#          opacity: 0.9
+#          fillOpacity: 0.4
+
   idea:
-    label: _(idea)
+    label: _(Idea)
     rules:
       - condition: '"{{location_type}}" === "idea" && {{map.zoom}} < 11 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-idea-trans.png
-          iconSize: [7, 12]
+          iconUrl: /static/css/images/markers/marker-idea.png
+          iconSize: [10, 12]
           iconAnchor: [5, 12]
 
       - condition: '"{{location_type}}" === "idea" && {{map.zoom}} < 13 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-idea-trans.png
+          iconUrl: /static/css/images/markers/marker-idea.png
           iconSize: [24, 29]
           iconAnchor: [12, 29]
 
       - condition: '"{{location_type}}" === "idea" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
         icon:
-          iconUrl: /static/css/images/markers/marker-idea-trans.png
+          iconUrl: /static/css/images/markers/marker-idea.png
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
       - condition: '"{{location_type}}" === "idea" && {{layer.focused}} === true'
         icon:
-          iconUrl: /static/css/images/markers/marker-idea-trans.png
+          iconUrl: /static/css/images/markers/marker-idea.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+#      - condition: '"{{location_type}}" === "idea" && {{map.zoom}} < 13 && {{layer.focused}} === false'
+#        # Display landmarks as circles (vectors) when zoomed out
+#
+#        style:
+#          color: '#0d85e9'
+#          radius: 3
+#          weight: 1
+#          opacity: 0.9
+#          fillOpacity: 1
+#
+#      - condition: '"{{location_type}}" === "idea" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
+#        # Display landmarks as icons when zoomed in
+#
+#        icon:
+#          iconUrl: /static/css/images/markers/marker-idea.png
+#          iconSize: [50, 60]
+#          iconAnchor: [24, 59]
+#
+#      - condition: '"{{location_type}}" === "idea" && {{layer.focused}} === true'
+#        # Display landmarks as icons when zoomed in
+#
+#        icon:
+#          iconUrl: /static/css/images/markers/marker-idea.png
+#          shadowUrl: /static/css/images/marker-shadow.png
+#          iconSize: [80, 96]
+#          shadowSize: [41, 41]
+#          iconAnchor: [39, 94]
+
+  complaint:
+    label: _(Complaint)
+    rules:
+      - condition: '"{{location_type}}" === "complaint" && {{map.zoom}} < 11 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '"{{location_type}}" === "complaint" && {{map.zoom}} < 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [24, 29]
+          iconAnchor: [12, 29]
+
+      - condition: '"{{location_type}}" === "complaint" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+      - condition: '"{{location_type}}" === "complaint" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-complaint.png
           shadowUrl: /static/css/images/marker-shadow.png
           iconSize: [50, 60]
           iconAnchor: [25, 60]
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
-
 # TODO: Create data visualization where a cluster represents it location type makeup
 cluster:
   threshold: 100
-  class_small: raingardens-cluster-small
-  class_large: raingardens-cluster-large
+  class_small: cluster-small
+  class_large: cluster-large
   size_small: 40
   size_large: 60
 
@@ -174,11 +326,37 @@ cluster:
 # note: sidebar is aka 'MasterLegend'
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
 sidebar:
-  enabled: false
+  enabled: true
+  legend_enabled: true
+  slug: filter-type
+  # Layers are defined in the "map config" section
+  # TODO: Refactor the Layers section into its own sidebar
+  layersTitle: _(Map Layers)
+  reports:
+    title: _(Report Types)
+    items:
+      - title: _(Observations)
+        image: /static/css/images/markers/marker-observation.png
+        url: /filter/observation
+      - title: _(Ideas)
+        image: /static/css/images/markers/marker-idea.png
+        url: /filter/idea
+      - title: _(Questions)
+        image: /static/css/images/markers/marker-question.png
+        url: /filter/question
+      - title: _(Complaints)
+        image: /static/css/images/markers/marker-complaint.png
+        url: /filter/complaint
+      - title: _(Hide Reports)
+        url: /filter/none
+        image: /static/css/images/hide-all.png
+      - title: _(Show Reports)
+        url: /
+        image: /static/css/images/show-all.png
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
-  enabled: false
+  enabled: true
   # How often to refresh the activity list, in milliseconds.
   interval: 30000
 
@@ -348,3 +526,17 @@ support:
   response_plural_name: _(likes)
   action_text: liked
   anonymous_name: _(Someone)
+
+pages:
+  - title: _(About)
+    slug: about
+    name: overview
+    start_page: true
+
+  - title: _(Background)
+    slug: background
+    name: background
+
+  - title: _(Contribute)
+    slug: contribute
+    name: contribute
