--- a/src/flavors/trees/config.yml
+++ b/src/flavors/trees/config.yml
@@ -52,13 +52,6 @@ map:
 
   # Report filters
 
-    - title: _(Rain gardens)
-      shareabouts: true
-      image: /static/css/images/markers/marker-observation.png
-      url: /filter/tree
-      external: true
-      visible: true
-
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
 
@@ -107,12 +100,12 @@ activity:
 
 place:
   adding_supported: true
-  add_button_label: _(Add a rain garden to the map!)
+  add_button_label: _(Add a tree to the map!)
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(Show as a list)
   show_map_button_label: _(Back to the Map)
   action_text: _(added)
-  title: _(Register your rain garden)
+  title: _(Register your tree)
   action_text: _(added)
   anonymous_name: _(Anonymous)
   submit_button_label: _(Put it on the map!)
@@ -120,36 +113,35 @@ place:
   location_item_name: Address
 
   items:
-    - prompt: _(Rain garden location)
+    - prompt: _(Tree location)
       type: geocoding
-      name: private-rain_garden_address
-      optional:
+      name: private-address
       attrs:
         - key: placeholder
           value: _(Please type full address, (will not be published))
         - key: size
           value: 30
-    - prompt: _(Garden Name)
-      label: _(Garden Name:)
+    - prompt: _(Tree Name)
+      label: _(Tree Name:)
       type: text
-      name: rain_garden_name
-      optional: true
+      name: common_name
       attrs:
         - key: placeholder
-          value: _(Garden Name)
+          value: _(ie "California Wax Myrtle")
         - key: size
           value: 30
-    - prompt: _(Rain garden size (square feet))
-      label: _(Rain garden size (square feet):)
+    - prompt: _(Latin Name)
+      label: _(Latin Name:)
       type: text
-      name: rain_garden_size
+      name: latin_name
+      optional: true
       sticky: true
       attrs:
         - key: placeholder
-          value: _(Approximate square footage?)
+          value: _(ie "Myrica Californica")
         - key: size
           value: 30
-    - prompt: _(Size of contributing area)
+    - prompt: _(Condition?)
       label: _(Size of contributing area:)
       type: text
       name: contributing_area
@@ -157,74 +149,42 @@ place:
       sticky: true
       attrs:
         - key: placeholder
-          value: _(How large is the catchment area that drains to this rain garden?)
+          value: _(ie "struggling", "okay", "healthy")
         - key: size
           value: 30
-    - prompt: _(Description)
-      label: _(Description:)
-      type: textarea
-      name: description
-      optional: true
-      attrs:
-        - key: placeholder
-          value: _(Any notes you want to add for others would be wonderful :))
-    - name: location_type
-      type: hidden
-      value: raingarden
-    - prompt: _(Primary sources)
-      label: _(Sources:)
-      type: checkbox-list
-      name: sources
-      attrs:
-        - label: _(Roof)
-          value: roof
-        - label: _(Pavement)
-          value: pavement
-        - label: _(Other)
-          value: other
-    - prompt: _(Designer)
-      label: _(Designer:)
+    - prompt: _(First Name (will not be published))
+      # label: _(First Name:)
       type: text
-      name: designer
-      optional: 
-      sticky: true
+      name: private-first_name
       attrs:
         - key: placeholder
-          value: _(Designed by?)
-        - key: size
-          value: 30
-    - prompt: _(Installer)
-      label: _(Installer:)
+          value: _(will not be published)
+    - prompt: _(Last Name (will not be published))
       type: text
-      name: installer
-      optional: 
-      sticky: true
+      name: private-last_name
       attrs:
         - key: placeholder
-          value: _(Installed by?)
-        - key: size
-          value: 30
-    - prompt: _(Contributor's name)
-      label: _(Contributor's name:)
-      type: text
-      name: contributor_name
-      optional: 
-      sticky: true
-      attrs:
-        - key: placeholder
-          value: _(Who should we give credit to?)
-        - key: size
-          value: 30
+          value: _(will not be published)
     - prompt: _(Your Email)
       type: text
-      name: private-contributor_email
+      name: private-submitter_email
       optional: 
       sticky: true
       attrs:
         - key: required
+        - key: placeholder
           value: _(Your email address is kept private and will not be published)
         - key: size
           value: 30
+    - prompt: _(ID Tag)
+      type: text
+      name: private-id_tag
+      attrs:
+        - key: placeholder
+          value: _(Leave blank if unknown)
+    - name: location_type
+      type: hidden
+      value: tree
     - prompt:
       inputfile_label: _(Please add an image)
       type: file
