--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -519,6 +519,66 @@ place:
         type: text
         name: name
 
+  items:
+     - prompt: _(Title of report)
+       type: text
+       name: name
+       optional: true
+       attrs:
+         - key: placeholder
+           value: _(Enter title)
+         - key: size
+           value: 30
+     - prompt: _(Your Name)
+       type: text
+       name: submitter_name
+       optional: true
+       sticky: true
+       attrs:
+         - key: placeholder
+           value: _(Name)
+         - key: size
+           value: 30
+     - prompt: _(Your Email)
+       type: text
+       name: private-submitter_email
+       optional: true
+       sticky: true
+       attrs:
+         - key: placeholder
+           value: _(Email address)
+         - key: size
+           value: 30
+     - prompt: _(Type of report)
+       type: select
+       options:
+         - label: _(Observation)
+           value: observation
+         - label: _(Question)
+           value: question
+         - label: _(Idea)
+           value: idea
+         - label: _(Complaint)
+           value: complaint
+       name: location_type
+       attrs:
+         - key: required
+     - prompt: _(Description)
+       type: textarea
+       name: description
+       optional: true
+       attrs:
+         - key: placeholder
+           value: _(Description...)
+     - prompt: _(Image)
+       inputfile_label: _(Add an Image)
+       type: file
+       name: my_image
+       optional: true
+       attrs:
+         - key: accept
+           value: image/*
+
   # items:
   #   - prompt: _(Title of report)
   #     type: text
